# COCO-MIG-Bench

./: .gitignore  LEADERBOARD.md  README.md  pyproject.toml  run_migbench.py
dev/: convert_filenames.py  convert_mig_bench_to_jsonl.py  mig_bench.json
src/: run_migbench.py
src/migbench/: __init__.py
src/migbench/data/: mig_bench.jsonl
